InsuranceOrg/force-app/main/default/objects/vlocity_ins__ErrorCode__c/vlocity_ins__ErrorCode__c.object-meta.xml
<CustomObject>
    <label>Error Code</label>
    <nameField>
        <label>Error Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>