InsuranceOrg/force-app/main/default/objects/vlocity_ins__ErrorCode__c/fields/vlocity_ins__Namespace__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Namespace__c</fullName>
    <label>Namespace</label>
    <referenceTo>vlocity_ins__ErrorCodeNamespace__c</referenceTo>
    <relationshipLabel>Error Codes</relationshipLabel>
    <relationshipName>Namespace</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>