InsuranceOrg/force-app/main/default/objects/vlocity_ins__ErrorCode__c/fields/vlocity_ins__Semantics__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Semantics__c</fullName>
    <label>Semantics</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not an error</fullName>
            </value>
            <value>
                <fullName>Retriable</fullName>
            </value>
            <value>
                <fullName>Fatal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>